--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.20.0",
     "styled-components": "^6.1.1"
   },
